--- a/index.html
+++ b/index.html
@@ -60,21 +60,25 @@
   <div class="container-fluid" id="info">
 
     <div class="col-md-4">
-      <img src="src/refrigerator.svg" alt="Fridge" height="87px" width="100px" id="svg" />
-      <h3>Virtual Fridge</h3>
-      <p>Scan your food items into a personal virtual fridge.</p>
-
+      <img src="src/calendar.svg" alt="Meal Planning" height="87px" width="100px" id="svg" />
+      <h3>Meal Planning</h3>
+      <p>Create a personalized meal plan that works for you; get recipes based on what you already have in your fridge</p>
     </div>
+
     <div class="col-md-4">
       <img src="src/choco.svg" alt="Calorie" height="87px" width="100px" id="svg" />
       <h3>Calorie Tracking</h3>
-      <p>Track daily calorie consumption, breakdown by nutritional information, etc.</p>
+      <p>Intuitively track your calorie intake and stay on track to meet your goals</p>
     </div>
+
     <div class="col-md-4">
-      <img src="src/calendar.svg" alt="Meal Planning" height="87px" width="100px" id="svg" />
-      <h3>Meal Planning</h3>
-      <p>Get custom meal plans based on the food found in your fridge.</p>
+      <img src="src/refrigerator.svg" alt="Fridge" height="87px" width="100px" id="svg" />
+      <h3>Virtual Fridge</h3>
+      <p>Create a personalized meal plan that works for you; get recipes based on what you already have in your fridge</p>
+
     </div>
+
+
 
 
 
@@ -87,8 +91,8 @@
       <div class="thumbnail text-center">
         <img id="jumbocover"src="src/jumbo.png" class="img-responsive"/>
         <div class="caption">
-          <p> CartSavy is a meal planning service which allows you to quickly and easily portion the food in your fridge to create healthy and delicious meals. </p>
-          <button type="button" class="btn btn-primary " id="signupbut"><a href="login.html">Sign Up</a></button>
+        <!--  <p> CartSavy is a meal planning service which allows you to quickly and easily portion the food in your fridge to create healthy and delicious meals. </p> -->
+          <button type="button" class="btn btn-primary" href="signup.html" id="signupbut">Sign Up</button>
         </div>
     </div>
       </div>
