--- a/privacy.html
+++ b/privacy.html
@@ -44,6 +44,112 @@
         </div>
       </div>
     </nav>
+<div id = "priv">
+    <h2 id = "privtitle">Privacy Policy</h3>
+    <p>Protecting your private information is our priority. This Statement of Privacy applies to
+http://cartsavy.com and Cart Savy and governs data collection and usage. For the purposes of this
+Privacy Policy, unless otherwise noted, all references to Cart Savy include http://cartsavy.com. By
+using the Cart Savy website, you consent to the data practices described in this statement.</p>
+    <h4 id = "privhead">Collection of your Personal Information</h4>
+    <p>Cart Savy may collect personally identifiable information, such as your:
+
+
+If you purchase Cart Savy's products and services, we collect billing and credit card information.
+This information is used to complete the purchase transaction.
+
+Cart Savy may also collect anonymous demographic information, which is not unique to you, such
+as your:
+</p>
+<ul>
+  <li>Name</li>
+  <li>E-Mail address</li>
+</ul>
+
+<p>If you purchase Cart Savy's products and services, we collect billing and credit card information.
+This information is used to complete the purchase transaction.
+
+Cart Savy may also collect anonymous demographic information, which is not unique to you, such
+as your: </p>
+<ul>
+  <li>Age</li>
+  <li>Gender</li>
+</ul>
+
+<p>We may gather additional personal or non-personal information in the future.
+
+Cart Savy encourages you to review the privacy statements of websites you choose to link to from
+Cart Savy so that you can understand how those websites collect, use and share your information.
+Cart Savy is not responsible for the privacy statements or other content on websites outside of the
+Cart Savy website.
+</p>
+
+<h4 id = "privhead">Use of your Personal Information</h4>
+
+<p>Cart Savy collects and uses your personal information to operate its website(s) and deliver the
+services you have requested.
+
+Cart Savy may also use your personally identifiable information to inform you of other products or
+services available from Cart Savy and its affiliates. Cart Savy may also contact you via surveys to
+conduct research about your opinion of current services or of potential new services that may be
+offered.
+
+Cart Savy does not sell, rent or lease its customer lists to third parties.
+
+Cart Savy may share data with trusted partners to help perform statistical analysis, send you email
+or postal mail, provide customer support, or arrange for deliveries. All such third parties are
+prohibited from using your personal information except to provide these services to Cart Savy, and
+they are required to maintain the confidentiality of your information.</p>
+<ul>
+  <li>Name</li>
+  <li>E-Mail address</li>
+  <li>Age</li>
+  <li>Gender</li>
+</ul>
+
+<p>
+Cart Savy will disclose your personal information, without notice, only if required to do so by law
+or in the good faith belief that such action is necessary to: (a) conform to the edicts of the law or
+comply with legal process served on Cart Savy or the site; (b) protect and defend the rights or
+property of Cart Savy; and, (c) act under exigent circumstances to protect the personal safety of
+users of Cart Savy, or the public. </p>
+
+<h4 id = "privhead">Automatically Collected Information</h4>
+
+<p>Information about your computer hardware and software may be automatically collected by Cart
+Savy. This information can include: your IP address, browser type, domain names, access times
+and referring website addresses. This information is used for the operation of the service, to
+maintain quality of the service, and to provide general statistics regarding use of the Cart Savy
+website.
+</p>
+
+<h4 id = "privhead">Children Under Thirteen</h4>
+<p>Cart Savy does not knowingly collect personally identifiable information from children under the
+age of thirteen. If you are under the age of thirteen, you must ask your parent or guardian for
+permission to use this website.
+</p>
+
+<h4 id = "privhead">Opt-Out and Unsubscribe</h4>
+<p>We respect your privacy and give you an opportunity to opt-out of receiving announcements of
+certain information. Users may opt-out of receiving any or all communications from Cart Savy by
+contacting us here: </p>
+<ul>
+  <li>- Web page: _________________</li>
+  <li>- Email: _________________</li>
+  <li>- Phone: _________________</li>
+</ul>
+
+<h4 id = "privhead">Changes to this Statement</h4>
+<p>Cart Savy will occasionally update this Statement of Privacy to reflect company and customer
+feedback. Cart Savy encourages you to periodically review this Statement to be informed of how
+Cart Savy is protecting your information.
+</p>
+
+<h4 id = "privhead">Contact Information</h4>
+<p>Cart Savy welcomes your questions or comments regarding this Statement of Privacy. If you
+believe that Cart Savy has not adhered to this Statement, please contact Cart Savy at:
+</p>
+
+</div>
 
   </body>
 </html
