--- a/team.html
+++ b/team.html
@@ -51,6 +51,11 @@
 
            <div class="row">
              <div class="col-md-4">
+               <img src="src\headshots\Dan.jpg" alt="headshot" id="hs" />
+               <h3>CTO</h3>
+               <p> Daniel Naryshev        </p>
+             </div>
+             <div class="col-md-4">
                <img src="src\headshots\Danny.jpg" alt="headshot" id="hs" />
                <h3>CEO</h3>
                <p>Danny Pinter         </p>
@@ -63,11 +68,7 @@
               </span>
 
              </div>
-             <div class="col-md-4">
-               <img src="src\headshots\Dan.jpg" alt="headshot" id="hs" />
-               <h3>CTO</h3>
-               <p> Daniel Naryshev        </p>
-             </div>
+
              <div class="col-md-4">
                <img src="src\headshots\Rachel.jpg" alt="headshot" id="hs" />
                <h3>CMO</h3>
@@ -86,7 +87,7 @@
                     <p>Flynn D'Angelo</p>
                   </div>
                   <div class="col-md-4">
-                    <img src="http://via.placeholder.com/125x125" alt="headshot" id="hs" />
+                    <img src="src\headshots\Esha.jpg" alt="headshot" id="hs" />
                     <h3>CCO</h3>
                     <p>Esha Ahluwalia</p>
                   </div>
