--- a/login.html
+++ b/login.html
@@ -10,9 +10,9 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Lobster|Pacifico|Roboto+Slab|Nunito" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/cover.css" />
-  <script type="text/javascript" src="js/javascript.js">
   </script>
 
 </head>
@@ -54,7 +54,6 @@
           </ul>
           <div id="myTabContent" class="tab-content">
             <div class="tab-pane active in" id="login">
-              <form class="form-horizontal" action="" method="POST" style="max-width: 768px;">
                 <fieldset>
                   <div class="control-group">
                     <div class="form-group">
@@ -72,14 +71,12 @@
                   <div class="control-group">
                     <!-- Button -->
                     <div class="controls">
-                      <button class="btn btn-success">Login</button>
+                      <button id="loginBtn" class="btn btn-default">Login</button>
                     </div>
                   </div>
                 </fieldset>
-              </form>
             </div>
             <div class="tab-pane fade " id="create">
-              <form name="registration_form" id="registration_form" class="form-horizontal">
                 <div class="form-group">
                   <div class="col-sm-6">
                     <label for="firstname" class="sr-only"></label>
@@ -93,31 +90,33 @@
                   <div class="form-group">
                   <div class="col-sm-12">
                     <label for="email" class="sr-only"></label>
-                    <input id="email" class="form-control input-group-lg" type="text" autocapitalize="off" name="email" title="Enter email" placeholder="Email">
+                    <input id="emailsu" class="form-control input-group-lg" type="text" autocapitalize="off" name="email" title="Enter email" placeholder="Email">
                   </div>
                 </div>
                 <div class="form-group">
                   <div class="col-sm-6">
                     <label for="password" class="sr-only"></label>
-                    <input id="password" class="form-control input-group-lg" type="password" name="password" title="Enter password" placeholder="Password">
+                    <input id="passwordsu" class="form-control input-group-lg" type="password" name="password" title="Enter password" placeholder="Password">
                   </div>
                   <div class="col-sm-6">
                     <label for="password" class="sr-only"></label>
-                    <input id="password" class="form-control input-group-lg" type="password" name="password" title="Confirm Password" placeholder="Confirm Password">
+                    <input id="passwordsuConf" class="form-control input-group-lg" type="password" name="password" title="Confirm Password" placeholder="Confirm Password">
                   </div>
                 </div>
                 <div class="control-group">
                   <!-- Button -->
                   <div class="controls">
-                    <button class="btn btn-success">Sign Up</button>
+                    <button id="signupbtn" class="btn btn-default">Sign Up</button>
+
                   </div>
                 </div>
-              </form>
-            </div>
+              </div>
           </div>
         </div>
       </div>
     </div>
+    <script type="text/javascript" src="js/firebase.js"></script>
+
 </body>
 
 </html>
