--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="col-md-4">
       <img src="src/refrigerator.svg" alt="Fridge" height="87px" width="100px" id="svg" />
       <h3>Virtual Fridge</h3>
-      <p>Create a personalized meal plan that works for you; get recipes based on what you already have in your fridge</p>
+      <p>Track and manage your fridge from anywhere.</p>
 
     </div>
 
@@ -91,7 +91,7 @@
         <img id="jumbocover"src="src/jumbo.png" class="img-responsive"/>
         <div class="caption">
         <!--  <p> CartSavy is a meal planning service which allows you to quickly and easily portion the food in your fridge to create healthy and delicious meals. </p> -->
-          <button type="button" class="btn btn-primary" href="signup.html" id="signupbut">Sign Up</button>
+          <button type="button" class="btn btn-default" href="login.html" id="signupBtn">Sign Up</button>
         </div>
     </div>
       </div>
@@ -120,7 +120,7 @@
   <!-- JS -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script src="js/javascript.js">
+  <script src="js/javascript.js"></script>
 
 </body>
 
