--- a/account/fridge.html
+++ b/account/fridge.html
@@ -5,16 +5,14 @@
   <title>Cart Savy</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/png" href="src/favicon.png" sizes="16x16"/ >
-
+  <link rel="icon" type="image/png" href="src/favicon.png" sizes="16x16" />
+  <script src="https://use.fontawesome.com/9b4daed836.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Lobster|Pacifico|Roboto+Slab|Nunito" rel="stylesheet">
 
-  <link rel="stylesheet" type="text/css" href="css/cover.css" />
-  <script src="js/javascript.js">
-  </script>
+  <link rel="stylesheet" type="text/css" href="../css/cover.css" />
 
 
 
@@ -23,7 +21,7 @@
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="index.html" id="navlogotext"> <span id="navlogocart">  Cart </span> <span id="navlogosavy">Savy </a>
-        <img src="src/logo.svg" alt="Cart Savy" height="35px" id="logo" />
+      <img src="../src/logo.svg" alt="Cart Savy" height="35px" id="logo" />
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -35,18 +33,29 @@
 
       </ul>
       <ul class="nav navbar-nav navbar-right">
+        <li><a href="plan.html">Meal Planning</a></li>
         <li><a href="discover.html">Discover</a></li>
         <li><a href="team.html">Our Team</a></a></li>
-        <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        <li><a id ="logoutBtn" href="login.html"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+
       </ul>
     </div>
   </div>
 </nav>
-  <div>
-    <h1 id= "allyLeft"> Easy as 1  two 3</h1>
-    </p>
-  </div>
+<div class="container">
+  <div class="well">
+    <div class="list-group row">
+      <ul class="col-md-4">
+        <li class="list-group-item"><a href="account/account.html">Account </a></li>
+        <li class="list-group-item"><a href="account/preferences.html">Prefrences</a></li>
+        <li class="list-group-item"><a href="account/security.html">Security</a></li>
+        <li class="list-group-item">\</li>
+      </ul>
+      <div class="col-md-8">
+        <h1 id="emailSec">Title test.</h1>
 
+      </div>
+</div>
 
-</body>
+</body
 </html>
