--- a/login.html
+++ b/login.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Lobster|Pacifico|Roboto+Slab|Nunito" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/cover.css" />
