After pitch push

--- a/account.html
+++ b/account.html
@@ -20,7 +20,7 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="index.html" id="navlogotext"> <span id="navlogocart">  Cart </span> <span id="navlogosavy">Savy </a>
+      <a class="navbar-brand" href="../index.html" id="navlogotext"> <span id="navlogocart">  Cart </span> <span id="navlogosavy">Savy </a>
       <img src="src/logo.svg" alt="Cart Savy" height="35px" id="logo" />
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
@@ -34,9 +34,9 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="plan.html">Meal Planning</a></li>
-        <li><a href="discover.html">Discover</a></li>
+        <li><a href="discover.html">Pricing</a></li>
         <li><a href="team.html">Our Team</a></a></li>
-        <li><a id ="logoutBtn" href="login.html"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+        <li><a id ="logoutBtn" href="../login.html"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
 
       </ul>
     </div>
@@ -44,17 +44,16 @@
 </nav>
 <div class="container">
   <div class="well">
-    <p>*** UNDER CONSTRUCTION*** </p>
+    <!-- <p>*** UNDER CONSTRUCTION*** </p> -->
     <div class="list-group row">
       <ul class="col-md-4">
         <li class="list-group-item"><a href="account/preferences.html">Prefrences</a></li>
         <li class="list-group-item"><a href="account/security.html">Security</a></li>
         <li class="list-group-item"><a href="account/fridge.html">Fridge</a></li>
-        <li class="list-group-item">\</li>
       </ul>
       <div class="col-md-8">
         <h1 id="emailSec">Title test.</h1>
-        <div id="avi-box">
+        <div id="avi-box ">
           <img src="src/avatar.svg" id="avi-pic" alt="Kiwi standing on oval" height="100px">
         </div>
       </div>
