--- a/login.html
+++ b/login.html
@@ -13,6 +13,7 @@
   <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Lobster|Pacifico|Roboto+Slab|Nunito" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="css/cover.css" />
   </script>
 
@@ -75,6 +76,27 @@
                       <button id="loginBtn" class="btn btn-default">Login</button>
                     </div>
                   </div>
+                  <hr />
+                  <div class="social">
+                    <h4>Connect with</h4>
+                    <ul>
+                      <li>
+                      <a href="" class="facebook" onclick="comingSoon()">
+                        <span class="fa fa-facebook"></span>
+                      </a>
+                      </li>
+                      <li>
+                        <a href="" class="twitter" onclick="comingSoon()">
+                          <span class="fa fa-twitter"></span>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="" class="google-plus" onclick="comingSoon()">
+                          <span class="fa fa-google-plus"></span>
+                        </a>
+                      </li>
+                    </ul>
+                   </div>
                 </fieldset>
             </div>
             <div class="tab-pane fade " id="create">
