--- a/plan.html
+++ b/plan.html
@@ -35,7 +35,7 @@
 
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="discover.html">Discover</a></li>
+        <li><a href="discover.html">Pricing</a></li>
         <li><a href="team.html">Our Team</a></a></li>
         <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
       </ul>
@@ -43,7 +43,7 @@
   </div>
 </nav>
   <div>
-    <h1 id= "allyLeft"> Easy as 1  two 3</h1>
+    <h1 id= "allyLeft"> Easy as 1 2 3</h1>
     </p>
   </div>
 
