--- a/account/fridge.html
+++ b/account/fridge.html
@@ -9,6 +9,7 @@
   <script src="https://use.fontawesome.com/9b4daed836.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Lobster|Pacifico|Roboto+Slab|Nunito" rel="stylesheet">
 
@@ -20,7 +21,7 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="index.html" id="navlogotext"> <span id="navlogocart">  Cart </span> <span id="navlogosavy">Savy </a>
+      <a class="navbar-brand" href="../index.html" id="navlogotext"> <span id="navlogocart">  Cart </span> <span id="navlogosavy">Savy </a>
       <img src="../src/logo.svg" alt="Cart Savy" height="35px" id="logo" />
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
@@ -34,9 +35,10 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="plan.html">Meal Planning</a></li>
-        <li><a href="discover.html">Discover</a></li>
-        <li><a href="team.html">Our Team</a></a></li>
-        <li><a id ="logoutBtn" href="login.html"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+        <li><a href="discover.html">Pricing</a></li>
+        <li><a href="team.html">Our Team</a></a>
+        </li>
+        <li><a id="logoutBtn" href="../login.html"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
 
       </ul>
     </div>
@@ -46,16 +48,27 @@
   <div class="well">
     <div class="list-group row">
       <ul class="col-md-4">
-        <li class="list-group-item"><a href="account/account.html">Account </a></li>
-        <li class="list-group-item"><a href="account/preferences.html">Prefrences</a></li>
-        <li class="list-group-item"><a href="account/security.html">Security</a></li>
-        <li class="list-group-item">\</li>
+        <li class="list-group-item"><a href="account.html">Account </a></li>
+        <li class="list-group-item"><a href="preferences.html">Prefrences</a></li>
+        <li class="list-group-item"><a href="billing.html">Billing</a></li>
+
+
       </ul>
       <div class="col-md-8">
-        <h1 id="emailSec">Title test.</h1>
-
+        <h1 id="emailSec"></h1>
+        <h2 id="reff"></h2>
+        <h3 id="dl"></h3>
+        <section>
+          <table>
+            <tbody id="demotb"></tbody>
+          </table>
+        </section>
       </div>
-</div>
+    </div>
+    <div>
 
-</body
+    </div>
+    <script src="../js/fridgefirebase.js"></script>
+    </body>
+
 </html>
