--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Contact Us</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/png" href="src/favicon.png" sizes="16x16"/ >
+  <link rel="icon" type="image/png" href="src/favicon.png" sizes="16x16" />
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -23,7 +24,7 @@
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="index.html" id="navlogotext"> <span id="navlogocart">  Cart </span> <span id="navlogosavy">Savy </a>
-        <img src="src/logo.svg" alt="Cart Savy" height="35px" id="logo" />
+      <img src="src/logo.svg" alt="Cart Savy" height="35px" id="logo" />
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -36,8 +37,9 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="plan.html">Meal Planning</a></li>
-        <li><a href="discover.html">Discover</a></li>
-        <li><a href="team.html">Our Team</a></a></li>
+        <li><a href="discover.html">Pricing</a></li>
+        <li><a href="team.html">Our Team</a></a>
+        </li>
 
         <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
       </ul>
@@ -45,58 +47,50 @@
   </div>
 </nav>
 <div class="container" id="formholder">
-    <div class="row">
-        <div class="col-md-8">
-            <div class="well well-sm">
-                <form>
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <label for="name">
-                                Name</label>
-                            <input type="text" class="form-control" id="name" placeholder="Enter name" required="required" />
-                        </div>
-                        <div class="form-group">
-                            <label for="email">
-                                Email Address</label>
-                            <div class="input-group">
-                                <span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span>
-                                </span>
-                                <input type="email" class="form-control" id="email" placeholder="Enter email" required="required" /></div>
-                        </div>
-                        <div class="form-group">
-                            <label for="subject">
-                                Subject</label>
-                            <select id="subject" name="subject" class="form-control" required="required">
-                                <option value="na" selected="">Choose One:</option>
-                                <option value="service">General Customer Service</option>
-                                <option value="suggestions">Suggestions</option>
-                                <option value="product">Product Support</option>
-                                <option value="other">Other</option>
-
-                            </select>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <label for="name">
-                                Message</label>
-                            <textarea name="message" id="message" class="form-control" rows="9" cols="25" required="required"
-                                placeholder="Message"></textarea>
-                        </div>
-                    </div>
-                    <div class="col-md-12">
-                        <button type="submit" class="btn btn-primary pull-right" id="btnContactUs">
-                            Send Message</button>
-                    </div>
-                </div>
-                </form>
+  <div class="row">
+    <div class="col-md-8">
+      <div class="well well-sm">
+        <form method="POST" action="https://enformed.io/eh64eb">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="name">  Name</label>
+                <input type="text" class="form-control" id="name" placeholder="Enter name" required="required" />
+              </div>
+              <div class="form-group">
+                <label for="email">Email Address</label>
+                <div class="input-group">
+                  <span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span>
+                  </span>
+                  <input type="email" class="form-control" id="email" placeholder="Enter email" required="required" /></div>
+              </div>
+              <div class="form-group">
+                <label for="subject">Subject</label>
+                <select id="subject" name="subject" class="form-control" required="required">
+                    <option value="na" selected="">Choose One:</option>
+                    <option value="service">General Customer Service</option>
+                    <option value="suggestions">Suggestions</option>
+                    <option value="product">Product Support</option>
+                    <option value="other">Other</option>
+                </select>
+              </div>
             </div>
-        </div>
-        <div class="col-md-4">
-            <form>
-            <legend><span class="glyphicon glyphicon-globe"></span> Our office</legend>
-            <address>
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="name">Message</label>
+                <textarea name="message" id="message" class="form-control" rows="9" cols="25" required="required" placeholder="Message"></textarea>
+              </div>
+            </div>
+            <div class="col-md-12">
+              <button type="submit" class="btn btn-primary pull-right" id="btnContactUs">Send Message</button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <legend><span class="glyphicon glyphicon-globe"></span> Our office</legend>
+      <address>
                 <strong>Cart Savy, Inc.</strong><br>
                 1545 26th Street<br>
                 Santa Monica, CA 90403<br>
@@ -104,12 +98,12 @@
                     P:</abbr>
                 (123) 456-7890
             </address>
-            <address>
+      <address>
                 <a href="mailto:#">cartsavy@gmail.com</a>
             </address>
-            </form>
-        </div>
     </div>
+  </div>
 </div>
 </body>
+
 </html>
