--- a/discover.html
+++ b/discover.html
@@ -5,7 +5,7 @@
   <title>Cart Savy</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/png" href="src/favicon.png" sizes="16x16"/ >
+  <link rel="icon" type="image/png" href="src/favicon.png" sizes="16x16" />
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -23,7 +23,7 @@
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="index.html" id="navlogotext"> <span id="navlogocart">  Cart </span> <span id="navlogosavy">Savy </a>
-        <img src="src/logo.svg" alt="Cart Savy" height="35px" id="logo" />
+      <img src="src/logo.svg" alt="Cart Savy" height="35px" id="logo" />
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -36,13 +36,36 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="plan.html">Meal Planning</a></li>
-        <li><a href="team.html">Our Team</a></a></li>
+        <li><a href="team.html">Our Team</a></a>
+        </li>
         <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
       </ul>
     </div>
   </div>
 </nav>
+<div class="container-fluid">
+  <div class="col-md-3 col-md-offset-3">
+    <ul class="price">
+      <li class="header">Freezer</li>
+      <li class="grey">$0.00</li>
+      <li>10 cart items</li>
+      <li>Advertisements</li>
 
+      <li class="grey"><a href="login.html" class="btn btn-default">Sign Up</a></li>
+    </ul>
+  </div>
+  <div class="col-md-3">
+    <ul class="price">
+      <li class="header">Fridge</li>
+      <li class="grey">$ 1.99 </li>
+      <li>Unlimited Strage</li>
+      <li>No advertisements</li>
+      <li class="grey"><a href="login.html" class="btn btn-default">Sign Up</a></li>
+    </ul>
+  </div>
 
+</div>
+</div>
 </body>
+
 </html>
