--- a/index.html
+++ b/index.html
@@ -90,8 +90,7 @@
       <div class="thumbnail text-center">
         <img id="jumbocover"src="src/jumbo.png" class="img-responsive"/>
         <div class="caption">
-        <!--  <p> CartSavy is a meal planning service which allows you to quickly and easily portion the food in your fridge to create healthy and delicious meals. </p> -->
-          <button type="button" class="btn btn-default" href="login.html" id="signupBtn">Sign Up</button>
+          <button type="button" class="btn btn-default" id="signupBtn"><a href="login.html">Sign Up</a></button>
         </div>
     </div>
       </div>
@@ -115,7 +114,7 @@
       </p>
 
     </div>
-
+    <p>&#169 Cart Savy 2017</p>
   </div>
   <!-- JS -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
